# llvm-pass

./: .gitignore  CMakeLists.txt  Makefile  README.md  element.cpp  element.h  err.txt  fuck  fuck.cpp  func.txt  ignore.txt  main.cpp  output.txt  start.cpp  top-config.txt
analysis/: function_0_event_handler.txt  function_0_foo.txt  function_0_main.txt  function_100_process_stats_conns.txt  function_103_conn_to_str.txt  function_105_limited_get.txt  function_108_limited_get_locked.txt  function_10_parse_addrs_list_port.txt  function_111_do_add_delta.txt  function_117_do_accept_new_conns.txt  function_118_update_event.txt  function_121_maxconns_handler.txt  function_122_main.txt  function_123_sanitycheck.txt  function_125_sig_handler.txt  function_126_sighup_handler.txt  function_127_sig_usrhandler.txt  function_128_settings_init.txt  function_129_verify_default.txt  function_137_usage.txt  function_138_usage_license.txt  function_13_parse_addrs_list.txt  function_143_enable_large_pages.txt  function_14_rbuf_switch_to_malloc.txt  function_151__parse_slab_sizes.txt  function_16_select_a_server.txt  function_172_stats_init.txt  function_174_conn_init.txt  function_176__mc_meta_load_cb.txt  function_177__mc_meta_save_cb.txt  function_18_conn_close_idle.txt  function_18_proxy.txt  function_194_clock_handler.txt  function_195_server_socket_unix.txt  function_198_server_sockets.txt  function_1_realtime.txt  function_202_save_pid.txt  function_207_remove_pidfile.txt  function_20_conn_set_state.txt  function_213_conn_cleanup.txt  (+63 more)
example/: memcached.ll  proxy.ll  simple.ll
